--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titre de la page -->
-    <title>Titre de la page | Nom du site</title>
+    <title>CV d'Aedan Bélet</title>
     <!-- Auteur -->
-    <meta name="author" content="Laure Dinateur">
+    <meta name="author" content="Aedan Bélet">
     <!-- Description de la page -->
     <meta name="description" content="Brève description du contenu de la page.">
     <!-- Reset CSS Normalize CSS -->
