--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titre de la page -->
-    <title>CV d'Aedan Bélet</title>
+    <title>Titre de la page | Nom du site</title>
     <!-- Auteur -->
-    <meta name="author" content="Aedan Bélet">
+    <meta name="author" content="Laure Dinateur">
     <!-- Description de la page -->
     <meta name="description" content="Brève description du contenu de la page.">
     <!-- Reset CSS Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+    <!-- CSS de base -->
+    <link rel="stylesheet" href="css/main.css"/>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <h1>Titre principal de la page</h1>
