--- a/index.html
+++ b/index.html
@@ -6,24 +6,54 @@
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titre de la page -->
-    <title>Titre de la page | Nom du site</title>
+    <title>Aedan Bélet | Curriculum vitæ</title>
     <!-- Auteur -->
-    <meta name="author" content="Laure Dinateur">
+    <meta name="author" content="Aedan Bélet">
     <!-- Description de la page -->
-    <meta name="description" content="Brève description du contenu de la page.">
-    <!-- Reset CSS Normalize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
-    <!-- CSS de base -->
-    <link rel="stylesheet" href="css/main.css"/>
+    <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+<link rel="icon" type="image/png" href="favicon.ico"/>
 </head>
 <body>
-    <h1>Titre principal de la page</h1>
+<header>
+    <a class="logo" href="img/apple-touch-icon.png">
+        <img scr="img/apple-touch-icon.png">
+    </a>
+
+    <nav>
+        <ul class="menu">
+            <li>
+                <a herf="#expe">Mes expériences</a>
+                </li>
+                <li>
+                    <a href="#comp">Mes compétences</a>
+                </li>
+                <li>
+                    <a href="#comp">Ma formation</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+<main>
+    <h1 id="top">Aedan Bélet</h1>
+    <p>Apprenti en informatique</p>
+
+    <h2 id="expe">Mes expériences professionnelles</H2>
+
+    <ul>
+        <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
+    </ul>
+    <h2> id="comp">Mes compétances</h2>
+
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</main>
+<footer>
+    &copy;2024 - Aedan Bélet | <a herf="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
+</footer>
 </body>
 </html>
