--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
-    <h2> id="comp">Mes compétances</h2>
+    <h2 id="comp">Mes compétances</h2>
 
     <ul>
         <li></li>
