--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         <li></li>
         <li></li>
     </ul>
+
+    <h2 id="formation">Ma formation</h2> 
+    <ul>
+        <li>Scolarité de la première à la cinquième année effectué à Fontenais.</li>
+        <li>Scolarité de la sexième à la huitième année effectué à l'Oiselier.</li>
+        <li>Soclarité de la neuvième à la onzième année effectué à Thurmann.</li>
+        <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
+    </ul>
 </main>
 <footer>
     &copy;2024 - Aedan Bélet | <a herf="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
