--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     </ul>
 </main>
 <footer>
-    &copy;2024 - Aedan Bélet | <a herf="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
+    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
+   
 </footer>
 </body>
 </html>
