--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <footer>
     &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
    
+    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
 </footer>
 </body>
 </html>
