--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <header>
     <a class="logo" href="img/apple-touch-icon.png">
-        <img scr="img/apple-touch-icon.png">
+        <img scr="img/apple-touch-icon.png" alt="Emoji de CV">
     </a>
 
     <nav>
