--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Description de la page -->
     <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
-<link rel="img" type="image/png" href="https://github.com/divtec-cejef/cv-01-html-YuriAyato144/blob/main/img/favicon-32x32.png"/>
+<link rel="img" type="image/png" href="favicon.ico" />
 </head>
 <body>
 <header>
