--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <!-- Description de la page -->
     <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
-<link rel="img" type="image/png" href="favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 <header>
