--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header>
     <a class="logo" href="img/apple-touch-icon.png">
-        <img scr="img/apple-touch-icon.png" alt="Emoji de CV">
+        <img scr="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
     </a>
 
     <nav>
