--- a/mon-cv.html
+++ b/mon-cv.html
@@ -12,12 +12,15 @@
     <!-- Description de la page -->
     <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
-<link rel="icon" type="image/png" href="favicon.ico"/>
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 <header>
     <a class="logo" href="img/apple-touch-icon.png">
-        <img scr="img/apple-touch-icon.png">
+        <img scr="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
     </a>
 
     <nav>
@@ -43,7 +46,7 @@
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
-    <h2> id="comp">Mes compétances</h2>
+    <h2 id="comp">Mes compétances</h2>
 
     <ul>
         <li></li>
@@ -51,9 +54,18 @@
         <li></li>
         <li></li>
     </ul>
+
+    <h2 id="formation">Ma formation</h2> 
+    <ul>
+        <li>Scolarité de la première à la cinquième année effectué à Fontenais.</li>
+        <li>Scolarité de la sexième à la huitième année effectué à l'Oiselier.</li>
+        <li>Soclarité de la neuvième à la onzième année effectué à Thurmann.</li>
+        <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
+    </ul>
 </main>
 <footer>
-    &copy;2024 - Aedan Bélet | <a herf="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
+   &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
+
 </footer>
 </body>
 </html>
