--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header>
-    <a class="logo" href="img/apple-touch-icon.png">
+    <a href="#" class="logo">
         <img scr="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
     </a>
 
