--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header>
     <a href="#" class="logo">
-        <img scr="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
+        <img src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
     </a>
 
     <nav>
