--- a/mon-cv.html
+++ b/mon-cv.html
@@ -19,8 +19,8 @@
 </head>
 <body>
 <header>
-    <a class="logo" href="img/apple-touch-icon.png">
-        <img scr="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
+    <a href="#" class="logo">
+        <img src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet"/>
     </a>
 
     <nav>
