--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header>
     <a href="#" class="logo">
-        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet"/>
+        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width="200">
     </a>
 
     <nav>
