Changement du code

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <nav>
         <ul class="menu">
             <li>
-                <a herf="#expe">Mes expériences</a>
+                <a herf="#expe">Expériences</a>
                 </li>
                 <li>
-                    <a href="#comp">Mes compétences</a>
+                    <a href="#comp">Compétences</a>
                 </li>
                 <li>
-                    <a href="#comp">Ma formation</a>
+                    <a href="#form">Formation</a>
                 </li>
             </ul>
         </nav>
@@ -41,21 +41,20 @@
     <h1 id="top">Aedan Bélet</h1>
     <p>Apprenti en informatique</p>
 
-    <h2 id="expe">Mes expériences professionnelles</H2>
+    <h2 id="expe">Expériences professionnelles</H2>
 
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
-    <h2 id="comp">Mes compétances</h2>
+    <h2 id="comp">Compétances</h2>
 
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Experience du salon de coiffure</li>
+        <li>Servial</li>
+        <li>Gentil</li>
     </ul>
 
-    <h2 id="formation">Ma formation</h2> 
+    <h2 id="formation">Formation</h2> 
     <ul>
         <li>Scolarité de la première à la cinquième année effectué à Fontenais.</li>
         <li>Scolarité de la sexième à la huitième année effectué à l'Oiselier.</li>
