--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <li>
                     <a href="#comp">Compétences</a>
                 </li>
-                <li>
-                    <a href="#form">Formation</a>
-                </li>
+               <li>
+                <a href="#comp">Formation</a>
+            </li>
             </ul>
         </nav>
     </header>
