--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     <nav>
         <ul class="menu">
-            <li>
-                <a herf="#expe">Expériences</a>
-                </li>
+           <li>
+                <a href="#expe">Expériences</a>
+            </li>
                 <li>
                     <a href="#comp">Compétences</a>
                 </li>
