--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <nav>
         <ul class="menu">
            <li>
-                <a href="#expe">Expériences</a>
+                <a href="#expe">Mes expériences professionnelle</a>
             </li>
                 <li>
-                    <a href="#comp">Compétences</a>
+                    <a href="#comp">Mes compétences</a>
                 </li>
                <li>
-                <a href="#comp">Formation</a>
+                <a href="#comp">Ma formation</a>
             </li>
             </ul>
         </nav>
