--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <h1 id="top">Aedan Bélet</h1>
     <p>Apprenti en informatique</p>
 
-    <h2 id="expe">Expériences professionnelles</H2>
+    <h2 id="expe">Mes expériences professionnelles</H2>
 
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
-    <h2 id="comp">Compétances</h2>
+    <h2 id="comp">Mes compétances</h2>
 
     <ul>
         <li>Experience du salon de coiffure</li>
@@ -54,7 +54,7 @@
         <li>Gentil</li>
     </ul>
 
-    <h2 id="formation">Formation</h2> 
+    <h2 id="formation">Ma formation</h2> 
     <ul>
         <li>Scolarité de la première à la cinquième année effectué à Fontenais.</li>
         <li>Scolarité de la sexième à la huitième année effectué à l'Oiselier.</li>
