--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <ul>
         <li>Experience du salon de coiffure</li>
-        <li>Servial</li>
+        <li>Serviable</li>
         <li>Gentil</li>
     </ul>
 
