--- a/mon-cv.html
+++ b/mon-cv.html
@@ -20,20 +20,20 @@
 <body>
 <header>
     <a href="#" class="logo">
-        <img src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet"/>
+        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width="200">
     </a>
 
     <nav>
         <ul class="menu">
-            <li>
-                <a herf="#expe">Mes expériences</a>
-                </li>
+           <li>
+                <a href="#expe">Mes expériences professionnelle</a>
+            </li>
                 <li>
                     <a href="#comp">Mes compétences</a>
                 </li>
-                <li>
-                    <a href="#comp">Ma formation</a>
-                </li>
+               <li>
+                <a href="#comp">Ma formation</a>
+            </li>
             </ul>
         </nav>
     </header>
@@ -49,10 +49,9 @@
     <h2 id="comp">Mes compétances</h2>
 
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Experience du salon de coiffure</li>
+        <li>Serviable</li>
+        <li>Gentil</li>
     </ul>
 
     <h2 id="formation">Ma formation</h2> 
@@ -62,6 +61,7 @@
         <li>Soclarité de la neuvième à la onzième année effectué à Thurmann.</li>
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
+    <img src="./img/Image.jpeg" alt="Salon de coiffure" width="450">
 </main>
 <footer>
    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
