--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Description de la page -->
     <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
+    <!-- TODO Indenter le code des icones -->
 <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
@@ -25,6 +26,7 @@
 
     <nav>
         <ul class="menu">
+            <!-- TODO Indenter le code correctement -->
            <li>
                 <a href="#expe">Mes expériences professionnelle</a>
             </li>
@@ -40,7 +42,7 @@
 <main>
     <h1 id="top">Aedan Bélet</h1>
     <p>Apprenti en informatique</p>
-
+    <!-- TODO faire une ligne vide avant les h2, regrouper le reste -->
     <h2 id="expe">Mes expériences professionnelles</H2>
 
     <ul>
@@ -61,11 +63,12 @@
         <li>Soclarité de la neuvième à la onzième année effectué à Thurmann.</li>
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
+    <!-- TODO nom de fichier et dossiers en minuscule -->
     <img src="./img/Image.jpeg" alt="Salon de coiffure" width="450">
 </main>
 <footer>
    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
-
+<!-- TODO supprimer ligne vide inutile -->
 </footer>
 </body>
 </html>
