Correction presque fini

--- a/index.html
+++ b/index.html
@@ -26,30 +26,29 @@
 
     <nav>
         <ul class="menu">
-            <!-- TODO Indenter le code correctement -->
+            <!-- TODO Indenter le code correctement OK-->
            <li>
                 <a href="#expe">Mes expériences professionnelle</a>
-            </li>
-                <li>
-                    <a href="#comp">Mes compétences</a>
-                </li>
-               <li>
+           </li>
+           <li>
+                <a href="#comp">Mes compétences</a>
+           </li>
+           <li>
                 <a href="#comp">Ma formation</a>
-            </li>
-            </ul>
-        </nav>
-    </header>
+           </li>
+        </ul>
+    </nav>
+</header>
 <main>
     <h1 id="top">Aedan Bélet</h1>
     <p>Apprenti en informatique</p>
-    <!-- TODO faire une ligne vide avant les h2, regrouper le reste -->
+    <!-- TODO faire une ligne vide avant les h2, regrouper le reste OK -->
     <h2 id="expe">Mes expériences professionnelles</H2>
-
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
+    
     <h2 id="comp">Mes compétances</h2>
-
     <ul>
         <li>Experience du salon de coiffure</li>
         <li>Serviable</li>
