--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="menu">
             <!-- TODO Indenter le code correctement OK-->
            <li>
-                <a href="#expe">Mes expériences professionnelle</a>
+                <a href="#expe">Mes expériences professionnelles</a>
            </li>
            <li>
                 <a href="#comp">Mes compétences</a>
@@ -48,7 +48,7 @@
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
     
-    <h2 id="comp">Mes compétances</h2>
+    <h2 id="comp">Mes compétences</h2>
     <ul>
         <li>Experience du salon de coiffure</li>
         <li>Serviable</li>
@@ -57,9 +57,9 @@
 
     <h2 id="formation">Ma formation</h2> 
     <ul>
-        <li>Scolarité de la première à la cinquième année effectué à Fontenais.</li>
-        <li>Scolarité de la sexième à la huitième année effectué à l'Oiselier.</li>
-        <li>Soclarité de la neuvième à la onzième année effectué à Thurmann.</li>
+        <li>Scolarité de la première à la cinquième année effectuée à Fontenais.</li>
+        <li>Scolarité de la sexième à la huitième année effectuée à l'Oiselier.</li>
+        <li>Scolarité de la neuvième à la onzième année effectuée à Thurmann.</li>
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
     <!-- TODO nom de fichier et dossiers en minuscule -->
