Correction presque fini

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
     <!-- TODO nom de fichier et dossiers en minuscule -->
-    <img src="./img/Image.jpeg" alt="Salon de coiffure" width="450">
+    <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
 </main>
 <footer>
    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
