Correction presque OK

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li>Scolarité de la neuvième à la onzième année effectuée à Thurmann.</li>
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
-    <!-- TODO nom de fichier et dossiers en minuscule -->
+    <!-- TODO nom de fichier et dossiers en minuscule OK -->
     <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
 </main>
 <footer>
