--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <header>
-    <a href="#" class="logo">
+    <a class="logo" href="img/aedan-belet-avatar.png">
         <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width="200">
     </a>
 
