Photo du bas clicable

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
     <!-- TODO nom de fichier et dossiers en minuscule OK -->
+    <a class="img" href="img/image.jpeg">
     <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
+    </a>
 </main>
 <footer>
    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
