--- a/mon-cv.html
+++ b/mon-cv.html
@@ -12,6 +12,7 @@
     <!-- Description de la page -->
     <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
+    <!-- TODO Indenter le code des icones -->
 <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
@@ -19,53 +20,53 @@
 </head>
 <body>
 <header>
-    <a href="#" class="logo">
+    <a class="logo" href="img/aedan-belet-avatar.png">
         <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width="200">
     </a>
-
     <nav>
         <ul class="menu">
+            <!-- TODO Indenter le code correctement OK-->
            <li>
-                <a href="#expe">Mes expériences professionnelle</a>
-            </li>
-                <li>
-                    <a href="#comp">Mes compétences</a>
-                </li>
-               <li>
+                <a href="#expe">Mes expériences professionnelles</a>
+           </li>
+           <li>
+                <a href="#comp">Mes compétences</a>
+           </li>
+           <li>
                 <a href="#comp">Ma formation</a>
-            </li>
-            </ul>
-        </nav>
-    </header>
+           </li>
+        </ul>
+    </nav>
+</header>
 <main>
     <h1 id="top">Aedan Bélet</h1>
     <p>Apprenti en informatique</p>
-
+    <!-- TODO faire une ligne vide avant les h2, regrouper le reste OK -->
     <h2 id="expe">Mes expériences professionnelles</H2>
-
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
     </ul>
-    <h2 id="comp">Mes compétances</h2>
-
+    <h2 id="comp">Mes compétences</h2>
     <ul>
         <li>Experience du salon de coiffure</li>
         <li>Serviable</li>
         <li>Gentil</li>
     </ul>
-
     <h2 id="formation">Ma formation</h2> 
     <ul>
-        <li>Scolarité de la première à la cinquième année effectué à Fontenais.</li>
-        <li>Scolarité de la sexième à la huitième année effectué à l'Oiselier.</li>
-        <li>Soclarité de la neuvième à la onzième année effectué à Thurmann.</li>
+        <li>Scolarité de la première à la cinquième année effectuée à Fontenais.</li>
+        <li>Scolarité de la sexième à la huitième année effectuée à l'Oiselier.</li>
+        <li>Scolarité de la neuvième à la onzième année effectuée à Thurmann.</li>
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
-    <img src="./img/Image.jpeg" alt="Salon de coiffure" width="450">
+    <!-- TODO nom de fichier et dossiers en minuscule OK -->
+    <a class="img" href="img/image.jpeg">
+    <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
+    </a>
 </main>
 <footer>
    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
-
+<!-- TODO supprimer ligne vide inutile -->
 </footer>
 </body>
 </html>
