renomage de la photo de chez Ana

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
     <!-- TODO nom de fichier et dossiers en minuscule OK -->
-    <a class="img" href="img/image.jpeg">
+    <a class="img_coiffure" href="img/image.jpeg">
     <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
     </a>
 </main>
