suppretion des tailles d'images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <header>
     <a class="logo" href="img/aedan-belet-avatar.png">
-        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width="200">
+        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet">
     </a>
     <nav>
         <ul class="menu">
@@ -62,7 +62,7 @@
     </ul>
     <!-- TODO nom de fichier et dossiers en minuscule OK -->
     <a class="img_coiffure" href="img/image.jpeg">
-    <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
+    <img src="./img/image.jpeg" alt="Salon de coiffure">
     </a>
 </main>
 <footer>
