--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
     </ul>
     <!-- TODO nom de fichier et dossiers en minuscule OK -->
-    <a class="img_coiffure" href="img/image.jpeg">
-    <img src="./img/image.jpeg" alt="Salon de coiffure">
+    <a class="coiffure" href="img/image.jpeg">
+    <img class="coiffure" src="./img/image.jpeg" alt="Salon de coiffure">
     </a>
 </main>
 <footer>
