--- a/mon-cv.html
+++ b/mon-cv.html
@@ -12,36 +12,34 @@
     <!-- Description de la page -->
     <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
     <!-- Favicon -->
-    <!-- TODO Indenter le code des icones -->
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 <header>
     <a class="logo" href="img/aedan-belet-avatar.png">
-        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width="200">
+        <img class="avatar" src="./img/aedan-belet-avatar.png" alt="Avatar de Aedan Bélet" width>
+        <!--="200"-->
     </a>
     <nav>
         <ul class="menu">
-            <!-- TODO Indenter le code correctement OK-->
-           <li>
+            <li>
                 <a href="#expe">Mes expériences professionnelles</a>
-           </li>
-           <li>
+            </li>
+            <li>
                 <a href="#comp">Mes compétences</a>
-           </li>
-           <li>
+            </li>
+            <li>
                 <a href="#comp">Ma formation</a>
-           </li>
+            </li>
         </ul>
     </nav>
 </header>
 <main>
     <h1 id="top">Aedan Bélet</h1>
     <p>Apprenti en informatique</p>
-    <!-- TODO faire une ligne vide avant les h2, regrouper le reste OK -->
     <h2 id="expe">Mes expériences professionnelles</H2>
     <ul>
         <li><strong>En 2023</strong> Préapprentissage dans le domaine de la coiffure.</li>
@@ -52,21 +50,21 @@
         <li>Serviable</li>
         <li>Gentil</li>
     </ul>
-    <h2 id="formation">Ma formation</h2> 
+    <h2 id="formation">Ma formation</h2>
     <ul>
         <li>Scolarité de la première à la cinquième année effectuée à Fontenais.</li>
         <li>Scolarité de la sexième à la huitième année effectuée à l'Oiselier.</li>
         <li>Scolarité de la neuvième à la onzième année effectuée à Thurmann.</li>
-        <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care.</li>
+        <li>Préapprentissage en coiffure effectué à la division artisanale et chez Ana's Hair Care (best salon ever).
+        </li>
     </ul>
-    <!-- TODO nom de fichier et dossiers en minuscule OK -->
-    <a class="img" href="img/image.jpeg">
-    <img src="./img/image.jpeg" alt="Salon de coiffure" width="450">
+    <a class="img" href="img/salon.jpeg">
+        <img src="img/salon.jpeg" alt="Salon de coiffure" width>
+        <!--="450"-->
     </a>
 </main>
 <footer>
-   &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
-<!-- TODO supprimer ligne vide inutile -->
+    &copy;2024 - Aedan Bélet | <a href="mailto:aedan.belet@divtec.ch">aedan.belet@divtec.ch</a>
 </footer>
 </body>
 </html>
