--- a/Aniversaire.html
+++ b/Aniversaire.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <!-- Jeu de caractères utilisé pour l'encodage du fichier HTML -->
+    <meta charset="UTF-8">
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Titre de la page -->
+    <title> Pour un anniversaire d'enfer </title>
+    <!-- Auteur -->
+    <meta name="author" content="Aedan Bélet">
+    <!-- Description de la page -->
+    <meta name="description" content="Le CV de Aedan Bélet, apprenti en informatique.">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo_anniversaire.png"/>
+</head>
+<body>
+<header>
+</header>
+<main>
 
+    <h1>Joyeux anniversaire à notre petite Zoé</h1>
+
+    <p>Un joyeux anniversaire à toi Zoé, déjà 18 ans que le temps passe vite.</p>
+    <p>Dire que je nous revoie encore enfant en train de jouer à embêter Manon et Galen</p>
+
+</main>
+<footer>
+    &copy;2025 - Aedan Bélet
+</footer>
+</body>
+</html>
